Add website content generated from `0828381f1f147b7d98ab8d8732f38343dc215330`

--- a/release-notes.html
+++ b/release-notes.html
@@ -387,6 +387,9 @@
 <p>Update <code>ch.qos.logback:logback-core</code> to version <code>1.5.8</code> (<a href="https://github.com/apache/logging-log4j2/pull/2928">2928</a>)</p>
 </li>
 <li>
+<p>Update <code>co.elastic.clients:elasticsearch-java</code> to version <code>8.15.2</code> (<a href="https://github.com/apache/logging-log4j2/pull/3023">3023</a>)</p>
+</li>
+<li>
 <p>Update <code>co.elastic.logging:log4j2-ecs-layout</code> to version <code>1.6.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2303">2303</a>)</p>
 </li>
 <li>
@@ -519,7 +522,7 @@
 <p>Update <code>org.mockito:mockito-bom</code> to version <code>5.14.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3042">3042</a>)</p>
 </li>
 <li>
-<p>Update <code>org.mongodb:bson</code> to version <code>5.1.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/2919">2919</a>)</p>
+<p>Update <code>org.mongodb:bson</code> to version <code>5.2.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/3016">3016</a>)</p>
 </li>
 <li>
 <p>Update <code>org.openrewrite.maven:rewrite-maven-plugin</code> to version <code>5.15.0</code> (<a href="https://github.com/apache/logging-log4j2/pull/2993">2993</a>)</p>
