--- a/plugin-reference.html
+++ b/plugin-reference.html
@@ -2667,12 +2667,7 @@ This attribute is ignored if <code>immediateFlush</code> is set to <code>true</c
 <tr>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code>Property</code></p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock"><code><a href="#org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-config-Property">Property</a>?</code></p></td>
-<td class="tableblock halign-left valign-top"><div class="content"><div class="paragraph">
-<p>A generic list of key/value properties</p>
-</div>
-<div class="paragraph">
-<p>The meaning of these properties depends on the component.</p>
-</div></div></td>
+<td class="tableblock halign-left valign-top"><div class="content"></div></td>
 </tr>
 <tr>
 <td class="tableblock halign-left valign-top"></td>
@@ -14313,10 +14308,7 @@ Each of which is responsible for converting an object in a converter specific ma
 </dl>
 </div>
 <div class="paragraph">
-<p>Outputs the Throwable portion of the LoggingEvent as a full stack trace unless this converter&#8217;s option is 'short', where it just outputs the first line of the trace, or if the number of lines to print is explicitly specified.</p>
-</div>
-<div class="paragraph">
-<p>The extended stack trace will also include the location of where the class was loaded from and the version of the jar if available.</p>
+<p><a href="#org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-pattern-ThrowablePatternConverter">ThrowablePatternConverter</a> variant where the rendered <code>java.lang.StackTraceElement</code>s are enriched with the enclosing JAR file and its version information, if available.</p>
 </div>
 <div class="sect4">
 <h5 id="org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-pattern-ExtendedThrowablePatternConverter_XML-snippet"><a class="anchor" href="#org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-pattern-ExtendedThrowablePatternConverter_XML-snippet"></a>XML snippet</h5>
@@ -15436,10 +15428,7 @@ toString(), or to output the value of a specific key within the property bundle 
 </dl>
 </div>
 <div class="paragraph">
-<p>Outputs the Throwable portion of the LoggingEvent as a full stack trace unless this converter&#8217;s option is 'short', where it just outputs the first line of the trace, or if the number of lines to print is explicitly specified.</p>
-</div>
-<div class="paragraph">
-<p>The extended stack trace will also include the location of where the class was loaded from and the version of the jar if available.</p>
+<p><a href="#org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-pattern-ThrowablePatternConverter">ThrowablePatternConverter</a> variant where the stack trace causal chain is rendered in reverse order.</p>
 </div>
 <div class="sect4">
 <h5 id="org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-pattern-RootThrowablePatternConverter_XML-snippet"><a class="anchor" href="#org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-pattern-RootThrowablePatternConverter_XML-snippet"></a>XML snippet</h5>
@@ -15601,7 +15590,7 @@ toString(), or to output the value of a specific key within the property bundle 
 </dl>
 </div>
 <div class="paragraph">
-<p>Outputs the Throwable portion of the LoggingEvent as a full stack trace unless this converter&#8217;s option is 'short', where it just outputs the first line of the trace, or if the number of lines to print is explicitly specified.</p>
+<p>Outputs certain information extracted from the <code>java.lang.Throwable</code> associated with a <code>org.apache.logging.log4j.core.LogEvent</code>.</p>
 </div>
 <div class="sect4">
 <h5 id="org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-pattern-ThrowablePatternConverter_XML-snippet"><a class="anchor" href="#org-apache-logging-log4j_log4j-core_org-apache-logging-log4j-core-pattern-ThrowablePatternConverter_XML-snippet"></a>XML snippet</h5>
