--- a/release-notes.html
+++ b/release-notes.html
@@ -359,6 +359,9 @@
 <p>Move Flume Appender to its own release lifecycle. (<a href="https://github.com/apache/logging-log4j2/issues/2902">2902</a>)</p>
 </li>
 <li>
+<p>Remove <code>ThrowableProxy</code> and its usages (<a href="https://github.com/apache/logging-log4j2/pull/3047">3047</a>)</p>
+</li>
+<li>
 <p>Remove CLI tools to generate logger wrappers and convert configuration files. These tools will be available in the next release of <a href="https://logging.apache.org/log4j/transform/latest/">Log4j Transform</a>.</p>
 </li>
 <li>
@@ -540,7 +543,7 @@
 <p>Update <code>org.slf4j:slf4j-nop</code> to version <code>2.0.16</code> (<a href="https://github.com/apache/logging-log4j2/pull/2959">2959</a>)</p>
 </li>
 <li>
-<p>Update <code>org.springframework.boot:spring-boot-autoconfigure</code> to version <code>3.3.3</code> (<a href="https://github.com/apache/logging-log4j2/pull/2884">2884</a>)</p>
+<p>Update <code>org.springframework.boot:spring-boot-autoconfigure</code> to version <code>3.3.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/2991">2991</a>)</p>
 </li>
 <li>
 <p>Update <code>org.springframework.cloud:spring-cloud-context</code> to version <code>4.1.4</code> (<a href="https://github.com/apache/logging-log4j2/pull/2733">2733</a>)</p>
