Add website content generated from `878962e8b7ddeb1a8c2f94c74a43924371c5355d`

--- a/release-notes.html
+++ b/release-notes.html
@@ -346,6 +346,9 @@
 <p>Fix custom thread-context data provider handling in lookups and filters. (<a href="https://github.com/apache/logging-log4j2/issues/2331">2331</a>)</p>
 </li>
 <li>
+<p>Fix reloading of the configuration from an HTTP(S) source (<a href="https://github.com/apache/logging-log4j2/issues/2937">2937</a>)</p>
+</li>
+<li>
 <p>Website is migrated to Antora with several formatting and link fixes (<a href="https://github.com/apache/logging-log4j2/pull/2443">2443</a>)</p>
 </li>
 </ul>
