--- a/release-notes.html
+++ b/release-notes.html
@@ -355,9 +355,14 @@
 <p>This releases contains &#8230;&#8203;</p>
 </div>
 <div class="sect2">
-<h3 id="_jmx_changes"><a class="anchor" href="#_jmx_changes"></a>JMX changes</h3>
+<h3 id="_graalvm_reachability_metadata"><a class="anchor" href="#_graalvm_reachability_metadata"></a>GraalVM reachability metadata</h3>
 <div class="paragraph">
-<p>Starting in version 2.24.0, JMX support is disabled by default and can be re-enabled via the <code>log4j2.disableJmx=false</code> system property.</p>
+<p>Log4j Core and all its extension modules have been enhanced with embedded
+<a href="https://www.graalvm.org/latest/reference-manual/native-image/metadata/">GraalVM reachability metadata</a>.
+This will allow the generation of GraalVM native images out-of-the-box, without any additional step necessary.</p>
+</div>
+<div class="paragraph">
+<p>See our <a href="#graalvm.adoc" class="xref unresolved">GraalVM guide</a> for more details.</p>
 </div>
 </div>
 <div class="sect2">
@@ -366,6 +371,9 @@
 <ul>
 <li>
 <p>Add Google OSS-Fuzz integration (<a href="https://github.com/apache/logging-log4j2/pull/2949">2949</a>)</p>
+</li>
+<li>
+<p>Add a <code>GraalVmProcessor</code> annotation processor to generate GraalVM reachability metadata. (<a href="https://github.com/apache/logging-log4j2/pull/3053">3053</a>)</p>
 </li>
 </ul>
 </div>
@@ -618,7 +626,7 @@ Please migrate to <a href="components.html#log4j-mongodb" class="xref page"><cod
 </div>
 </div>
 <div class="sect2">
-<h3 id="_jmx_changes_2"><a class="anchor" href="#_jmx_changes_2"></a>JMX changes</h3>
+<h3 id="_jmx_changes"><a class="anchor" href="#_jmx_changes"></a>JMX changes</h3>
 <div class="paragraph">
 <p>Starting in version 2.24.0, JMX support is disabled by default and can be re-enabled via the <code>log4j2.disableJmx=false</code> system property.</p>
 </div>
