Add website content generated from `bd40913a7bba4eb1fd568ce1c5fa4215a3c0fb6a`

--- a/release-notes.html
+++ b/release-notes.html
@@ -467,6 +467,9 @@ This will allow the generation of GraalVM native images out-of-the-box, without 
 <p>Update <code>org.apache.logging:logging-parent</code> to version <code>11.3.0</code></p>
 </li>
 <li>
+<p>Update <code>org.apache.maven.surefire:surefire-junit47</code> to version <code>3.5.1</code> (<a href="https://github.com/apache/logging-log4j2/pull/3062">3062</a>)</p>
+</li>
+<li>
 <p>Update <code>org.apache.tomcat:tomcat-juli</code> to version <code>10.1.30</code> (<a href="https://github.com/apache/logging-log4j2/pull/2999">2999</a>)</p>
 </li>
 <li>
