--- a/release-notes.html
+++ b/release-notes.html
@@ -352,17 +352,24 @@
 <h2 id="release-notes-2-x-x"><a class="anchor" href="#release-notes-2-x-x"></a>2.x.x</h2>
 <div class="sectionbody">
 <div class="paragraph">
-<p>This releases contains &#8230;&#8203;</p>
+<p>This minor release contains bug fixes, behavioral improvements, and a fully-fledged support for the GraalVM native image generation.</p>
 </div>
 <div class="sect2">
-<h3 id="_graalvm_reachability_metadata"><a class="anchor" href="#_graalvm_reachability_metadata"></a>GraalVM reachability metadata</h3>
+<h3 id="release-notes-2-25-0-graalvm"><a class="anchor" href="#release-notes-2-25-0-graalvm"></a>GraalVM reachability metadata</h3>
 <div class="paragraph">
-<p>Log4j Core and all its extension modules have been enhanced with embedded
+<p>Log4j Core and all its extension modules have been enriched with embedded
 <a href="https://www.graalvm.org/latest/reference-manual/native-image/metadata/">GraalVM reachability metadata</a>.
-This will allow the generation of GraalVM native images out-of-the-box, without any additional step necessary.</p>
+This allows the generation of GraalVM native images out-of-the-box without any additional steps.
+See our <a href="#graalvm.adoc" class="xref unresolved">GraalVM guide</a> for details.</p>
 </div>
+</div>
+<div class="sect2">
+<h3 id="release-notes-2-25-0-PL-ex"><a class="anchor" href="#release-notes-2-25-0-PL-ex"></a>Exception handling in Pattern Layout</h3>
 <div class="paragraph">
-<p>See our <a href="#graalvm.adoc" class="xref unresolved">GraalVM guide</a> for more details.</p>
+<p>Exception handling in <a href="manual/pattern-layout.html" class="xref page">Pattern Layout</a> went through a major rewrite.
+This effectively helped with fixing some bugs by matching the feature parity of all exception converters.
+Additionally, rendered stack traces are ensured to be prefixed with a newline, which used to be a whitespace in earlier versions.
+The support for the <code>{ansi}</code> option in exception converters is removed too.</p>
 </div>
 </div>
 <div class="sect2">
@@ -384,6 +391,9 @@ This will allow the generation of GraalVM native images out-of-the-box, without 
 <ul>
 <li>
 <p>Consolidate exception rendering logic and improve circular reference support in Pattern Layout (<a href="https://github.com/apache/logging-log4j2/pull/2691">2691</a>)</p>
+</li>
+<li>
+<p>Change the whitespace prefixing logic in Pattern Layout (<a href="https://github.com/apache/logging-log4j2/pull/3045">3045</a>)</p>
 </li>
 </ul>
 </div>
@@ -427,7 +437,20 @@ This will allow the generation of GraalVM native images out-of-the-box, without 
 <p>Fix <code>getLogger()</code> source incompatibility in Log4j 1 to Log4j 2 API Bridge (i.e., <code>log4j-1.2-api</code>) (<a href="https://github.com/apache/logging-log4j2/pull/3030">3030</a>)</p>
 </li>
 <li>
+<p>Fix property extraction from the root exception in Pattern Layout (<a href="https://github.com/apache/logging-log4j2/pull/3045">3045</a>)</p>
+</li>
+<li>
 <p>Avoid surrogate character handling in <code>JsonWriter</code></p>
+</li>
+</ul>
+</div>
+</div>
+<div class="sect2">
+<h3 id="release-notes-2-x-x-removed"><a class="anchor" href="#release-notes-2-x-x-removed"></a>Removed</h3>
+<div class="ulist">
+<ul>
+<li>
+<p>Remove support for the <code>{ansi}</code> option in Pattern Layout exception converters (<a href="https://github.com/apache/logging-log4j2/pull/3045">3045</a>)</p>
 </li>
 </ul>
 </div>
@@ -568,7 +591,7 @@ This will allow the generation of GraalVM native images out-of-the-box, without 
 </dl>
 </div>
 <div class="paragraph">
-<p>This release contains improvements and changes in several areas of Apache Log4j:</p>
+<p>This release contains improvements and changes in several areas of Log4j:</p>
 </div>
 <div class="sect2">
 <h3 id="_log4j_api"><a class="anchor" href="#_log4j_api"></a>Log4j API</h3>
@@ -594,7 +617,7 @@ Check your configuration for typos.</p>
 <div class="sect2">
 <h3 id="_documentation"><a class="anchor" href="#_documentation"></a>Documentation</h3>
 <div class="paragraph">
-<p>The <a href="index.html" class="xref page">Apache Log4j 2</a> website has been almost entirely rewritten to provide improved documentation and faster access to the information you need.</p>
+<p>The project website has been almost entirely rewritten to provide improved documentation and faster access to the information you need.</p>
 </div>
 </div>
 <div class="sect2">
@@ -1289,12 +1312,12 @@ for details.</p>
 <p>The Log4j 2.21.1 API, as well as the other artifacts, maintains binary compatibility with the previous release.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.21.1 requires Java 8 to run.
+<p>Log4j 2.21.1 requires Java 8 to run.
 The build requires JDK 11 and generates reproducible binaries.</p>
 </div>
 <div class="paragraph">
-<p>For complete information on Apache Log4j 2, including instructions on how to submit bug reports, patches, get support, or suggestions for improvement, see
-<a href="https://logging.apache.org/log4j/2.x/index.html">the Apache Log4j 2 website</a>.</p>
+<p>For complete information on Log4j 2, including instructions on how to submit bug reports, patches, get support, or suggestions for improvement, see
+<a href="https://logging.apache.org/log4j/2.x/index.html">the Log4j 2 website</a>.</p>
 </div>
 <div class="sect2">
 <h3 id="release-notes-2-21-1-fixed"><a class="anchor" href="#release-notes-2-21-1-fixed"></a>Fixed</h3>
@@ -1330,12 +1353,12 @@ which is shared in
 <p>The Log4j 2.21.0 API, as well as the other artifacts, maintains binary compatibility with the previous release.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.21.0 requires Java 8 to run.
+<p>Log4j 2.21.0 requires Java 8 to run.
 The build requires JDK 11 and generates reproducible binaries.</p>
 </div>
 <div class="paragraph">
-<p>For complete information on Apache Log4j 2, including instructions on how to submit bug reports, patches, get support, or suggestions for improvement, see
-<a href="https://logging.apache.org/log4j/2.x/index.html">the Apache Log4j 2 website</a>.</p>
+<p>For complete information on Log4j 2, including instructions on how to submit bug reports, patches, get support, or suggestions for improvement, see
+<a href="https://logging.apache.org/log4j/2.x/index.html">the Log4j 2 website</a>.</p>
 </div>
 <div class="sect2">
 <h3 id="_osgi_changes"><a class="anchor" href="#_osgi_changes"></a>OSGi changes</h3>
@@ -1618,7 +1641,7 @@ See <a href="https://issues.apache.org/jira/browse/LOG4J2-2975">LOG4J2-2975</a> 
 <p>The Log4j 2.20.0 API, as well as many core components, maintains binary compatibility with previous releases.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.20.0 requires a minimum of Java 8 to build and run.
+<p>Log4j 2.20.0 requires a minimum of Java 8 to build and run.
 Log4j 2.12.4 is the last release to support Java 7.
 Log4j 2.3.2 is the last release to support Java 6.
 Java 6 and Java 7 are no longer supported by the Log4j team.</p>
@@ -1767,7 +1790,7 @@ See <a href="https://issues.apache.org/jira/browse/LOG4J2-2975">LOG4J2-2975</a> 
 <p>The Log4j 2.19.0 API, as well as many core components, maintains binary compatibility with previous releases.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.19.0 requires a minimum of Java 8 to build and run.
+<p>Log4j 2.19.0 requires a minimum of Java 8 to build and run.
 Log4j 2.12.4 is the last release to support Java 7.
 Log4j 2.3.2 is the last release to support Java 6.
 Java 6 and Java 7 are no longer supported by the Log4j team.</p>
@@ -1892,7 +1915,7 @@ See <a href="https://issues.apache.org/jira/browse/LOG4J2-2975">LOG4J2-2975</a> 
 <p>The Log4j 2.18.0 API, as well as many core components, maintains binary compatibility with previous releases.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.18.0 requires a minimum of Java 8 to build and run.
+<p>Log4j 2.18.0 requires a minimum of Java 8 to build and run.
 Log4j 2.12.4 is the last release to support Java 7.
 Log4j 2.3.2 is the last release to support Java 6.
 Java 6 and Java 7 are no longer supported by the Log4j team.</p>
@@ -2106,7 +2129,7 @@ See <a href="https://issues.apache.org/jira/browse/LOG4J2-2975">LOG4J2-2975</a> 
 <p>The Log4j 2.17.2 API, as well as many core components, maintains binary compatibility with previous releases.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.17.2 requires a minimum of Java 8 to build and run.
+<p>Log4j 2.17.2 requires a minimum of Java 8 to build and run.
 Log4j 2.12.4 is the last release to support Java 7.
 Log4j 2.3.2 is the last release to support Java 6.
 Java 6 and Java 7 are no longer supported by the Log4j team.</p>
@@ -2455,7 +2478,7 @@ See <a href="https://issues.apache.org/jira/browse/LOG4J2-2975">LOG4J2-2975</a> 
 <p>The Log4j 2.17.1 API, as well as many core components, maintains binary compatibility with previous releases.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.17.1 requires a minimum of Java 8 to build and run.
+<p>Log4j 2.17.1 requires a minimum of Java 8 to build and run.
 Log4j 2.12.2 is the last release to support Java 7.
 Java 7 is no longer supported by the Log4j team.</p>
 </div>
@@ -2536,7 +2559,7 @@ Recursive evaluation is still allowed while generating the configuration.</p>
 <p>The Log4j 2.17.0 API, as well as many core components, maintains binary compatibility with previous releases.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.17.0 requires a minimum of Java 8 to build and run.
+<p>Log4j 2.17.0 requires a minimum of Java 8 to build and run.
 Log4j 2.12.2 is the last release to support Java 7.
 Java 7 is no longer supported by the Log4j team.</p>
 </div>
@@ -2612,7 +2635,7 @@ This behavior is no longer the default and must be enabled by specifying <code>%
 <p>The Log4j 2.16.0 API, as well as many core components, maintains binary compatibility with previous releases.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.16.0 requires a minimum of Java 8 to build and run.
+<p>Log4j 2.16.0 requires a minimum of Java 8 to build and run.
 Log4j 2.12.1 is the last release to support Java 7.
 Java 7 is no longer supported by the Log4j team.</p>
 </div>
@@ -2718,7 +2741,7 @@ LDAP also no longer supports classes that implement the <code>Referenceable</cod
 <p>The Log4j 2.15.0 API, as well as many core components, maintains binary compatibility with previous releases.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.15.0 requires a minimum of Java 8 to build and run.
+<p>Log4j 2.15.0 requires a minimum of Java 8 to build and run.
 Log4j 2.12.1 is the last release to support Java 7.
 Java 7 is no longer supported by the Log4j team.</p>
 </div>
@@ -7573,7 +7596,7 @@ It contains several bugfixes and new features.
 Log4j 2 requires a minimum of Java 7.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.4.1 requires a minimum of Java 7 to build and run.
+<p>Log4j 2.4.1 requires a minimum of Java 7 to build and run.
 Log4j 2.4 and greater requires Java 7, version 2.3 required Java 6.</p>
 </div>
 <div class="paragraph">
@@ -7682,7 +7705,7 @@ It contains several bugfixes and new features.
 As of this release Log4j now requires a minimum of Java 7.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.4 requires a minimum of Java 7 to build and run.
+<p>Log4j 2.4 requires a minimum of Java 7 to build and run.
 Log4j 2.4 and greater requires Java 7, version 2.3 required Java 6.</p>
 </div>
 <div class="paragraph">
@@ -7970,7 +7993,7 @@ The package names and Maven <code>groupId</code> have been changed to <code>org.
 It contains several bugfixes and new features.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.3 requires a minimum of Java 6 to build and run.
+<p>Log4j 2.3 requires a minimum of Java 6 to build and run.
 This will be the last release of Log4j 2 to support Java 6.
 Future releases will require a minimum of Java 7.</p>
 </div>
@@ -8102,7 +8125,7 @@ The package names and Maven <code>groupId</code> have been changed to <code>org.
 It contains several bugfixes and new features.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.2 requires a minimum of Java 6 to build and run.
+<p>Log4j 2.2 requires a minimum of Java 6 to build and run.
 Future releases may require a minimum of Java 7.</p>
 </div>
 <div class="paragraph">
@@ -8246,7 +8269,7 @@ There are two new Maven artifacts in this release: <code>log4j-jul</code> and <c
 Both components are API-based with optional Core features.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.1 requires a minimum of Java 6 to build and run.
+<p>Log4j 2.1 requires a minimum of Java 6 to build and run.
 Basic compatibility with Log4j 1.x is provided through the <code>log4j-1.2-api</code> component, however it does
 not implement some of the very implementation specific classes and methods.
 The package names and Maven <code>groupId</code> have been changed to <code>org.apache.logging.log4j</code> to avoid any conflicts with Log4j 1.x.</p>
@@ -8454,7 +8477,7 @@ The package names and Maven <code>groupId</code> have been changed to <code>org.
 <p>This is the third GA release which contains several bugfixes from the previous release.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.0.2 requires a minimum of Java 6 to build and run.
+<p>Log4j 2.0.2 requires a minimum of Java 6 to build and run.
 Basic compatibility with Log4j 1.x is provided through the <code>log4j-1.2-api</code> component, however it does
 not implement some of the very implementation specific classes and methods.
 The package names and Maven <code>groupId</code> have been changed to <code>org.apache.logging.log4j</code> to avoid any conflicts with Log4j 1.x.</p>
@@ -8532,7 +8555,7 @@ The package names and Maven <code>groupId</code> have been changed to <code>org.
 <p>This is the first patch release of Log4j 2.0 which contains numerous bug fixes.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.0.1 requires a minimum of Java 6 to build and run.
+<p>Log4j 2.0.1 requires a minimum of Java 6 to build and run.
 Basic compatibility with Log4j 1.x is provided through the <code>log4j-1.2-api</code> component, however it does
 not implement some of the very implementation specific classes and methods.
 The package names and Maven <code>groupId</code> have been changed to <code>org.apache.logging.log4j</code> to avoid any conflicts with Log4j 1.x.</p>
@@ -8641,14 +8664,14 @@ The package names and Maven <code>groupId</code> have been changed to <code>org.
 <p>This is the first GA release, after thirteen prior releases over the last 4 years.</p>
 </div>
 <div class="paragraph">
-<p>Apache Log4j 2.0 requires a minimum of Java 6 to build and run.
+<p>Log4j 2.0 requires a minimum of Java 6 to build and run.
 Basic compatibility with Log4j 1.x is provided through the <code>log4j-1.2-api</code> component, however it does not implement some of the very implementation specific classes and methods.
 The package names and Maven <code>groupId</code> have been changed to <code>org.apache.logging.log4j</code> to avoid any conflicts with Log4j 1.x.</p>
 </div>
 <div class="paragraph">
-<p>For complete information on Apache Log4j 2, including instructions on how to submit bug reports,
+<p>For complete information on Log4j 2, including instructions on how to submit bug reports,
 patches, or suggestions for improvement, see
-<a href="https://logging.apache.org/log4j/2.x/index.html">the Apache Log4j 2 website</a>.</p>
+<a href="https://logging.apache.org/log4j/2.x/index.html">the Log4j 2 website</a>.</p>
 </div>
 <div class="sect2">
 <h3 id="release-notes-2-0-added"><a class="anchor" href="#release-notes-2-0-added"></a>Added</h3>
