Add website content generated from `ab0fdbc51742646144f6ad29715f9bd1d9afa985`

--- a/release-notes.html
+++ b/release-notes.html
@@ -265,6 +265,9 @@
     <a class="nav-link" href="migrate-from-slf4j.html">Migrating from SLF4J</a>
   </li>
   <li class="nav-item" data-depth="1">
+    <a class="nav-link" href="graalvm.html">Building GraalVM native images</a>
+  </li>
+  <li class="nav-item" data-depth="1">
     <a class="nav-link" href="hibernate.html">Integrating with Hibernate</a>
   </li>
   <li class="nav-item" data-depth="1">
@@ -360,7 +363,7 @@
 <p>Log4j Core and all its extension modules have been enriched with embedded
 <a href="https://www.graalvm.org/latest/reference-manual/native-image/metadata/">GraalVM reachability metadata</a>.
 This allows the generation of GraalVM native images out-of-the-box without any additional steps.
-See our <a href="#graalvm.adoc" class="xref unresolved">GraalVM guide</a> for details.</p>
+See our <a href="graalvm.html" class="xref page">GraalVM guide</a> for details.</p>
 </div>
 </div>
 <div class="sect2">
