--- a/release-notes.html
+++ b/release-notes.html
@@ -443,6 +443,9 @@ The support for the <code>{ansi}</code> option in exception converters is remove
 <p>Fix property extraction from the root exception in Pattern Layout (<a href="https://github.com/apache/logging-log4j2/pull/3045">3045</a>)</p>
 </li>
 <li>
+<p>Fix key removal issues in Thread Context (<a href="https://github.com/apache/logging-log4j2/pull/3048">3048</a>)</p>
+</li>
+<li>
 <p>Avoid surrogate character handling in <code>JsonWriter</code></p>
 </li>
 </ul>
